--- a/index.html
+++ b/index.html
@@ -48,8 +48,8 @@
                             name="addition" id="addition" class="span-keyboard">+</span></button></td>
             </tr>
             <tr class="tr-keyboard">
-                <td class="td-keyboard"><button class="button-keyboard" onclick="insert('comma')"><span name="comma"
-                            id="comma" class="span-keyboard">,</span></button></td>
+                <td class="td-keyboard"><button class="button-keyboard" onclick="insert('dot')"><span name="dot"
+                            id="dot" class="span-keyboard">.</span></button></td>
                 <td class="td-keyboard"><button class="button-keyboard" onclick="insert('zero')"><span name="zero"
                             id="zero" class="span-keyboard">0</span></button></td>
                 <td class="td-keyboard"><button class="button-keyboard" onclick="calculate()"><span name="equal"
@@ -61,5 +61,4 @@
     </div>
     <br><br>
 </body>
-
 </html>
