--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="pt-BR">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -8,6 +9,7 @@
     <script src="script.js"></script>
     <title>Calculadora</title>
 </head>
+
 <body>
     <br><br>
     <div class="div-calculator">
@@ -16,47 +18,48 @@
         <br>
         <table class="table-keyboard">
             <tr class="tr-keyboard">
-                <td class="td-keyboard"><button class="button-keyboard" onclick="insert('division')"><span
-                            name="division" id="division" class="span-keyboard">/</span></button></td>
-                <td class="td-keyboard"><button class="button-keyboard" onclick="insert('seven')"><span name="seven"
-                            id="seven" class="span-keyboard">7</span></button></td>
-                <td class="td-keyboard"><button class="button-keyboard" onclick="insert('eight')"><span name="eight"
-                            id="eight" class="span-keyboard">8</span></button></td>
-                <td class="td-keyboard"><button class="button-keyboard" onclick="insert('nine')"><span name="nine"
-                            id="nine" class="span-keyboard">9</span></button></td>
+                <td class="td-keyboard"><button class="button-keyboard" onclick="insert('/')"><span name="/" id="/"
+                            class="span-keyboard">/</span></button></td>
+                <td class="td-keyboard"><button class="button-keyboard" onclick="insert('7')"><span name="7" id="7"
+                            class="span-keyboard">7</span></button></td>
+                <td class="td-keyboard"><button class="button-keyboard" onclick="insert('8')"><span name="8" id="8"
+                            class="span-keyboard">8</span></button></td>
+                <td class="td-keyboard"><button class="button-keyboard" onclick="insert('9')"><span name="9" id="9"
+                            class="span-keyboard">9</span></button></td>
             </tr>
             <tr class="tr-keyboard">
-                <td class="td-keyboard"><button class="button-keyboard" onclick="insert('multiplication')"><span
-                            name="multiplication" id="multiplication" class="span-keyboard">*</span></button></td>
-                <td class="td-keyboard"><button class="button-keyboard" onclick="insert('four')"><span name="four"
-                            id="four" class="span-keyboard">4</span></button></td>
-                <td class="td-keyboard"><button class="button-keyboard" onclick="insert('five')"><span name="five"
-                            id="five" class="span-keyboard">5</span></button></td>
-                <td class="td-keyboard"><button class="button-keyboard" onclick="insert('six')"><span name="six"
-                            id="six" class="span-keyboard">6</span></button></td>
+                <td class="td-keyboard"><button class="button-keyboard" onclick="insert('*')"><span name="*" id="*"
+                            class="span-keyboard">*</span></button></td>
+                <td class="td-keyboard"><button class="button-keyboard" onclick="insert('4')"><span name="4" id="4"
+                            class="span-keyboard">4</span></button></td>
+                <td class="td-keyboard"><button class="button-keyboard" onclick="insert('5')"><span name="5" id="5"
+                            class="span-keyboard">5</span></button></td>
+                <td class="td-keyboard"><button class="button-keyboard" onclick="insert('6')"><span name="6" id="6"
+                            class="span-keyboard">6</span></button></td>
             </tr>
             <tr class="tr-keyboard">
-                <td class="td-keyboard"><button class="button-keyboard" onclick="insert('subtraction')"><span
-                            name="subtraction" id="subtraction" class="span-keyboard">-</span></button></td>
-                <td class="td-keyboard"><button class="button-keyboard" onclick="insert('one')"><span name="one"
-                            id="one" class="span-keyboard">1</span></button></td>
-                <td class="td-keyboard"><button class="button-keyboard" onclick="insert('two')"><span name="two"
-                            id="two" class="span-keyboard">2</span></button></td>
-                <td class="td-keyboard"><button class="button-keyboard" onclick="insert('three')"><span name="three"
-                            id="three" class="span-keyboard">3</span></button></td>
+                <td class="td-keyboard"><button class="button-keyboard" onclick="insert('-')"><span name="-" id="-"
+                            class="span-keyboard">-</span></button></td>
+                <td class="td-keyboard"><button class="button-keyboard" onclick="insert('1')"><span name="1" id="1"
+                            class="span-keyboard">1</span></button></td>
+                <td class="td-keyboard"><button class="button-keyboard" onclick="insert('2')"><span name="2" id="2"
+                            class="span-keyboard">2</span></button></td>
+                <td class="td-keyboard"><button class="button-keyboard" onclick="insert('3')"><span name="3" id="3"
+                            class="span-keyboard">3</span></button></td>
             </tr>
             <tr class="tr-keyboard">
-                <td class="td-keyboard"><button class="button-keyboard" onclick="insert('addition')"><span
-                            name="addition" id="addition" class="span-keyboard">+</span></button></td>
-                <td class="td-keyboard"><button class="button-keyboard" onclick="insert('dot')"><span name="dot"
-                            id="dot" class="span-keyboard">.</span></button></td>
-                <td class="td-keyboard"><button class="button-keyboard" onclick="insert('zero')"><span name="zero"
-                            id="zero" class="span-keyboard">0</span></button></td>
-                <td class="td-keyboard"><button class="button-keyboard" onclick="calculate()"><span name="equal"
-                            id="equal" class="span-keyboard">=</span></button></td>
+                <td class="td-keyboard"><button class="button-keyboard" onclick="insert('+')"><span name="+" id="+"
+                            class="span-keyboard">+</span></button></td>
+                <td class="td-keyboard"><button class="button-keyboard" onclick="insert('.')"><span name="." id="."
+                            class="span-keyboard">.</span></button></td>
+                <td class="td-keyboard"><button class="button-keyboard" onclick="insert('0')"><span name="0" id="0"
+                            class="span-keyboard">0</span></button></td>
+                <td class="td-keyboard"><button class="button-keyboard" onclick="calculate()"><span name="=" id="="
+                            class="span-keyboard">=</span></button></td>
             </tr>
         </table>
     </div>
     <br><br>
 </body>
+
 </html>
