--- a/index.html
+++ b/index.html
@@ -5,8 +5,11 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css">
-    <script src="script.js"></script>
+    <link rel="stylesheet" href="style/calculator.css">
+    <link rel="stylesheet" href="style/keyboard.css">
+    <link rel="stylesheet" href="style/screen.css">
+    <script src="script/custom.js"></script>
+    <script src="script/boolean.js"></script>
     <title>Calculadora</title>
 </head>
 
