zero set as leading digit

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <br><br>
     <div class="div-calculator">
         <br><br>
-        <div class="div-screen"><span class="span-screen" nome="screen" id="screen"></span></div>
+        <div class="div-screen"><span class="span-screen" nome="screen" id="screen">0</span></div>
         <br>
         <table class="table-keyboard">
             <tr class="tr-keyboard">
