fixed screen issues

--- a/index.html
+++ b/index.html
@@ -21,8 +21,8 @@
         <div class="div-screen"><span class="span-screen" nome="screen" id="screen">0</span></div>
         <br>
         <table class="table-keyboard">
-            <tr>
-                <td><button class="button-keyboard" onclick="insert('/')"><span name="/" id="/"
+            <tr  class="tr-keyboard">
+                <td class="td-keyboard"><button class="button-keyboard" onclick="insert('/')"><span name="/" id="/"
                             class="span-keyboard">/</span></button></td>
                 <td><button class="button-keyboard" onclick="insert('7')"><span name="7" id="7"
                             class="span-keyboard">7</span></button></td>
@@ -31,7 +31,7 @@
                 <td><button class="button-keyboard" onclick="insert('9')"><span name="9" id="9"
                             class="span-keyboard">9</span></button></td>
             </tr>
-            <tr>
+            <tr class="tr-keyboard">
                 <td><button class="button-keyboard" onclick="insert('*')"><span name="*" id="*"
                             class="span-keyboard">*</span></button></td>
                 <td><button class="button-keyboard" onclick="insert('4')"><span name="4" id="4"
@@ -41,7 +41,7 @@
                 <td><button class="button-keyboard" onclick="insert('6')"><span name="6" id="6"
                             class="span-keyboard">6</span></button></td>
             </tr>
-            <tr>
+            <tr class="tr-keyboard">
                 <td><button class="button-keyboard" onclick="insert('-')"><span name="-" id="-"
                             class="span-keyboard">-</span></button></td>
                 <td><button class="button-keyboard" onclick="insert('1')"><span name="1" id="1"
@@ -51,7 +51,7 @@
                 <td><button class="button-keyboard" onclick="insert('3')"><span name="3" id="3"
                             class="span-keyboard">3</span></button></td>
             </tr>
-            <tr>
+            <tr  class="tr-keyboard">
                 <td><button class="button-keyboard" onclick="insert('+')"><span name="+" id="+"
                             class="span-keyboard">+</span></button></td>
                 <td><button class="button-keyboard" onclick="insert('.')"><span name="." id="."
