new features added

--- a/index.html
+++ b/index.html
@@ -22,6 +22,16 @@
         <br>
         <table class="table-keyboard">
             <tr  class="tr-keyboard">
+                <td class="td-keyboard"><button class="button-keyboard" onclick="insert('on/off')"><span name="on/off" id="on/off"
+                            class="span-keyboard">O</span></button></td>
+                <td><button class="button-keyboard" onclick="insert('C')"><span name="C" id="C"
+                            class="span-keyboard">C</span></button></td>
+                <td><button class="button-keyboard" onclick="insert('CE')"><span name="CE" id="CE"
+                            class="span-keyboard">CE</span></button></td>
+                <td><button class="button-keyboard" onclick="insert('<')"><span name="<" id="<"
+                            class="span-keyboard"><<span></button></td>
+            </tr>
+            <tr  class="tr-keyboard">
                 <td class="td-keyboard"><button class="button-keyboard" onclick="insert('/')"><span name="/" id="/"
                             class="span-keyboard">/</span></button></td>
                 <td><button class="button-keyboard" onclick="insert('7')"><span name="7" id="7"
