completed desktop program

--- a/index.html
+++ b/index.html
@@ -21,51 +21,51 @@
         <br>
         <table class="table-keyboard">
             <tr  class="tr-keyboard">
-                <td class="td-keyboard"><button class="button-keyboard" onclick="insert('on/off')"><span name="on/off" id="on/off"
+                <td class="td-keyboard"><button class="button-keyboard" onclick="alter('on/off')"><span name="on/off" id="on/off"
                             class="span-keyboard">O</span></button></td>
-                <td><button class="button-keyboard" onclick="insert('C')"><span name="C" id="C"
+                <td><button class="button-keyboard" onclick="alter('C')"><span name="C" id="C"
                             class="span-keyboard">C</span></button></td>
-                <td><button class="button-keyboard" onclick="insert('CE')"><span name="CE" id="CE"
+                <td><button class="button-keyboard" onclick="alter('CE')"><span name="CE" id="CE"
                             class="span-keyboard">CE</span></button></td>
-                <td><button class="button-keyboard" onclick="insert('<')"><span name="<" id="<"
+                <td><button class="button-keyboard" onclick="alter('<')"><span name="<" id="<"
                             class="span-keyboard"><<span></button></td>
             </tr>
             <tr  class="tr-keyboard">
-                <td class="td-keyboard"><button class="button-keyboard" onclick="insert('/')"><span name="/" id="/"
+                <td class="td-keyboard"><button class="button-keyboard" onclick="alter('/')"><span name="/" id="/"
                             class="span-keyboard">/</span></button></td>
-                <td><button class="button-keyboard" onclick="insert('7')"><span name="7" id="7"
+                <td><button class="button-keyboard" onclick="alter('7')"><span name="7" id="7"
                             class="span-keyboard">7</span></button></td>
-                <td><button class="button-keyboard" onclick="insert('8')"><span name="8" id="8"
+                <td><button class="button-keyboard" onclick="alter('8')"><span name="8" id="8"
                             class="span-keyboard">8</span></button></td>
-                <td><button class="button-keyboard" onclick="insert('9')"><span name="9" id="9"
+                <td><button class="button-keyboard" onclick="alter('9')"><span name="9" id="9"
                             class="span-keyboard">9</span></button></td>
             </tr>
             <tr class="tr-keyboard">
-                <td><button class="button-keyboard" onclick="insert('*')"><span name="*" id="*"
+                <td><button class="button-keyboard" onclick="alter('*')"><span name="*" id="*"
                             class="span-keyboard">*</span></button></td>
-                <td><button class="button-keyboard" onclick="insert('4')"><span name="4" id="4"
+                <td><button class="button-keyboard" onclick="alter('4')"><span name="4" id="4"
                             class="span-keyboard">4</span></button></td>
-                <td><button class="button-keyboard" onclick="insert('5')"><span name="5" id="5"
+                <td><button class="button-keyboard" onclick="alter('5')"><span name="5" id="5"
                             class="span-keyboard">5</span></button></td>
-                <td><button class="button-keyboard" onclick="insert('6')"><span name="6" id="6"
+                <td><button class="button-keyboard" onclick="alter('6')"><span name="6" id="6"
                             class="span-keyboard">6</span></button></td>
             </tr>
             <tr class="tr-keyboard">
-                <td><button class="button-keyboard" onclick="insert('-')"><span name="-" id="-"
+                <td><button class="button-keyboard" onclick="alter('-')"><span name="-" id="-"
                             class="span-keyboard">-</span></button></td>
-                <td><button class="button-keyboard" onclick="insert('1')"><span name="1" id="1"
+                <td><button class="button-keyboard" onclick="alter('1')"><span name="1" id="1"
                             class="span-keyboard">1</span></button></td>
-                <td><button class="button-keyboard" onclick="insert('2')"><span name="2" id="2"
+                <td><button class="button-keyboard" onclick="alter('2')"><span name="2" id="2"
                             class="span-keyboard">2</span></button></td>
-                <td><button class="button-keyboard" onclick="insert('3')"><span name="3" id="3"
+                <td><button class="button-keyboard" onclick="alter('3')"><span name="3" id="3"
                             class="span-keyboard">3</span></button></td>
             </tr>
             <tr  class="tr-keyboard">
-                <td><button class="button-keyboard" onclick="insert('+')"><span name="+" id="+"
+                <td><button class="button-keyboard" onclick="alter('+')"><span name="+" id="+"
                             class="span-keyboard">+</span></button></td>
-                <td><button class="button-keyboard" onclick="insert('.')"><span name="." id="."
+                <td><button class="button-keyboard" onclick="alter('.')"><span name="." id="."
                             class="span-keyboard">.</span></button></td>
-                <td><button class="button-keyboard" onclick="insert('0')"><span name="0" id="0"
+                <td><button class="button-keyboard" onclick="alter('0')"><span name="0" id="0"
                             class="span-keyboard">0</span></button></td>
                 <td><button class="button-keyboard" onclick="calculate()"><span name="=" id="="
                             class="span-keyboard">=</span></button></td>
